--- a/.config/iTerm/com.googlecode.iterm2.plist
+++ b/.config/iTerm/com.googlecode.iterm2.plist
@@ -1284,14 +1284,16 @@
 	<string>567 211 224 244 0 0 1440 900 </string>
 	<key>NSWindow Frame NSFontPanel</key>
 	<string>528 221 445 306 0 0 1440 900 </string>
+	<key>NSWindow Frame SUUpdateAlert</key>
+	<string>970 779 620 392 0 0 2560 1418 </string>
 	<key>NSWindow Frame SessionsPreferences</key>
 	<string>269 207 599 388 0 0 1440 900 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>503 827 918 381 0 0 2560 1418 </string>
+	<string>1384 958 918 401 0 0 2560 1418 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>700 225 1030 882 0 0 2560 1418 </string>
+	<string>2682 34 1100 844 2560 0 1440 878 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
-	<string>1103 897 800 521 0 0 2560 1418 </string>
+	<string>2961 0 800 878 2560 0 1440 878 </string>
 	<key>NeverWarnAboutShortLivedSessions_3543A154-4AAA-4B04-9109-DF4DD507839A</key>
 	<true/>
 	<key>NeverWarnAboutShortLivedSessions_3543A154-4AAA-4B04-9109-DF4DD507839A_selection</key>
@@ -1565,7 +1567,7 @@
 			<key>Close Sessions On End</key>
 			<true/>
 			<key>Columns</key>
-			<integer>80</integer>
+			<integer>110</integer>
 			<key>Command</key>
 			<string>/usr/local/bin/zsh -l</string>
 			<key>Cursor Boost</key>
@@ -1962,7 +1964,7 @@
 			<key>Right Option Key Sends</key>
 			<integer>0</integer>
 			<key>Rows</key>
-			<integer>25</integer>
+			<integer>42</integer>
 			<key>Screen</key>
 			<integer>-1</integer>
 			<key>Scrollback Lines</key>
@@ -2091,7 +2093,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2018-04-03T06:50:47Z</date>
+	<date>2018-04-23T10:20:52Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
 	<key>ShowBookmarkName</key>
@@ -2107,7 +2109,7 @@
 	<key>WordCharacters</key>
 	<string>/-+\~_.</string>
 	<key>iTerm Version</key>
-	<string>3.1.5</string>
+	<string>3.1.6</string>
 	<key>kCPKSelectionViewPreferredModeKey</key>
 	<integer>0</integer>
 	<key>kCPKSelectionViewShowHSBTextFieldsKey</key>
