Add global git ignore file

--- a/.gitconfig
+++ b/.gitconfig
@@ -4,5 +4,6 @@
 [core]
 	autocrlf = input
 	filemode = false
+	excludesfile = ~/.config/git/ignore
 [alias]
 	permission-reset = !git diff -p -R --no-color | grep -E \"^(diff|(old|new) mode)\" --color=never | git apply
