--- a/.config/iTerm/com.googlecode.iterm2.plist
+++ b/.config/iTerm/com.googlecode.iterm2.plist
@@ -1287,13 +1287,13 @@
 	<key>NSWindow Frame NSFontPanel</key>
 	<string>528 221 445 306 0 0 1440 900 </string>
 	<key>NSWindow Frame SUUpdateAlert</key>
-	<string>2970 381 620 392 2560 0 1440 900 </string>
+	<string>869 688 620 392 0 0 2560 1418 </string>
 	<key>NSWindow Frame SessionsPreferences</key>
 	<string>269 207 606 469 0 0 1440 900 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>2756 291 796 473 2560 0 1440 878 </string>
+	<string>301 668 796 486 0 0 2560 1418 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>1097 65 1440 837 0 0 2560 1418 </string>
+	<string>2808 24 840 812 2560 0 1440 878 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
 	<string>460 226 1350 1186 0 0 2560 1440 </string>
 	<key>NeverWarnAboutShortLivedSessions_3543A154-4AAA-4B04-9109-DF4DD507839A</key>
@@ -2095,7 +2095,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2018-07-13T12:48:05Z</date>
+	<date>2018-08-08T06:14:24Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
 	<key>ShowBookmarkName</key>
@@ -2109,13 +2109,15 @@
 	<key>TerminalMargin</key>
 	<integer>0</integer>
 	<key>TerminalVMargin</key>
-	<integer>0</integer>
+	<integer>3</integer>
 	<key>UseBorder</key>
 	<false/>
+	<key>UseMetal</key>
+	<true/>
 	<key>WordCharacters</key>
 	<string>/-+\~_.</string>
 	<key>iTerm Version</key>
-	<string>3.1.7</string>
+	<string>3.2.0</string>
 	<key>kCPKSelectionViewPreferredModeKey</key>
 	<integer>0</integer>
 	<key>kCPKSelectionViewShowHSBTextFieldsKey</key>
